--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,2 @@
-aioh2==0.2.2
-aiohttp==3.6.1
-aiohttp-remotes==0.1.2
-async-timeout==3.0.1
-attrs==19.1.0
-chardet==3.0.4
-dnspython==1.16.0
-doh-proxy==0.0.9
-h2==3.1.1
-hpack==3.0.0
-hyperframe==5.2.0
-idna==2.8
-idna-ssl==1.1.0
-multidict==4.5.2
-priority==1.3.0
-selenium==3.141.0
-typing-extensions==3.7.4
-urllib3==1.25.7
-yarl==1.3.0
+selenium
+pytest
