#4 create new tag when test pass

--- a/.github/workflows/runtest.yml
+++ b/.github/workflows/runtest.yml
@@ -24,3 +24,13 @@ jobs:
       run: |
         PATH=$PATH:gecko
         bash runtest.sh
+
+    - name: Create tag
+      run: |
+        git tag "CAVEWALL-$(date +%d%m%Y-%H%M%S)"
+
+    - name: Push tag
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        tags: true
