--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "hashids": "^2.2.1"
   }
 }
